--- a/A12.qmd
+++ b/A12.qmd
@@ -2,11 +2,12 @@
 title: "Bayesian Books in R & Python"
 ---
 
-<!-- 
-Add these to references.bib
+A number of books on Bayesian statistics and time series analysis are available in both R and Python. A number of these are introduced in the specilization and many others are worth mentioning.
 
--->
-There are many books in R and Python that can help you learn more about these languages and how to use them for data analysis. 
+<!-- TODO: Add these to references.bib -->
+
+
+There are many books in R and Python that can help you learn more about these languages and how to use them for data analysis.
 
 Here are some of the most popular books on R and Python:
 
@@ -34,7 +35,7 @@ Here are some of the most popular books on R and Python:
 
 ## Books in Python
 
-- [An Introduction to Statistical Learning with python](https://www.statlearning.com/) by Gareth James, Daniela Witten, Trevor Hastie, and Robert Tibshirani
+- [@james2013introduction] [An Introduction to Statistical Learning with python](https://www.statlearning.com/) by Gareth James, Daniela Witten, Trevor Hastie, and Robert Tibshirani
 -  [Python for Data Analysis](https://wesmckinney.com/book/) by Wes McKinney of Pandas infamy  parquet and Apache Arrow
 - [Python Data Science Handbook](https://jakevdp.github.io/PythonDataScienceHandbook/) by Jake VanderPlas
 - [Think Stats](https://greenteapress.com/thinkstats2/thinkstats2.pdf) by Allen B. Downey
@@ -43,6 +44,29 @@ Here are some of the most popular books on R and Python:
 ](https://dataorigami.net/Probabilistic-Programming-and-Bayesian-Methods-for-Hackers/) by Cameron Davidson-Pilon
 
 
+## Bayesian Statistics: Techniques and Models
+
+At the end of the course there is a handout called further reading. 
+In this course the following titles are recommended for further reading and reference, unfortunately some of the links were out of date.
+
+- [@kruschke2011doing] "Doing Bayesian Data Analysis" this is perhaps the favorite on Bayesian statistics. It is a great book for learning Bayesian statistics and covers a wide range of topics in Bayesian modeling, computation, and inference. The book is suitable for graduate students and researchers in statistics, computer science, and related fields.
+- [@McElreath2020Rethinking] "[Statistical Rethinking: A Bayesian Course with Examples in R and Stan](https://xcelab.net/rm/)" by Richard McElreath is prehaps, the runner up in terms of a popular book on Bayesian Statistics. This book is a great resource for learning Bayesian statistics and covers a wide range of topics in Bayesian modeling, computation, and inference. The book is suitable for graduate students and researchers in statistics, computer science, and related fields. McElreath is a gifted and entertaining explainer but he is not a full-fleged statistician and I find that in most cases the examples in this book are rather weak and challanging to adapt to real life settings.
+- [@gelman2013bayesian] "[Bayesian Data Analysis](https://sites.stat.columbia.edu/gelman/book/)" by Andrew Gelman, John B. Carlin, Hal S. Stern, David B. Dunson, Aki Vehtari, Donald B. Rubin. This book is considered the classic Graduate level text on Bayesian statistics and covers a wide range of topics in Bayesian data analysis. The book is suitable for graduate students and researchers in statistics, computer science, and related fields. This book is harder to read than the previous two books. I'd recommend reading and viewing McElreath's book first and only then moving to this book.
+- [@lunn2012bugs] "The BUGS book" is a classic text on Bayesian statistics and covers a wide range of topics in Bayesian modeling, computation, and inference.
+- [@carlin2008bayesian] Bayesian Methods for Data Analysis
+- [@agresti2012categorical] This is a graduate level book on categorical data which often poses extra challenges for Bayesian statistics. Section 17.5 covers Bayesian methods for Categorical Data.
+- [@spiegelhalter2002MeasuresOfModelComplexity] "Measures of Model Complexity and Fit" by David Spiegelhalter, Andrew Thomas, Nicky Best, and W. Brian Gilks. This paper considers the problem of model selection in Bayesian Hierarchical Models and proposes a new measure of model complexity and fit, the Deviance Information Criterion (DIC). 
+- [@banerjee2026hierarchical] "[Hierarchical Modeling and Analysis for Spatial Data](https://www.routledge.com/Hierarchical-Modeling-and-Analysis-for-Spatial-Data/Banerjee-Carlin-Gelfand/p/book/9781439819173)" by Sudipto Banerjee, Bradley P. Carlin, and Alan E. Gelfand. This book is a comprehensive introduction to hierarchical modeling and analysis for spatial data and covers a wide range of topics in spatial statistics, computation, and inference. The book is suitable for graduate students and researchers in statistics, computer science, and related fields. [data etc](https://www.counterpointstat.com/hierarchical-modeling-and-analysis-for-spatial-data.html/)
+- [@carlin2008bayesian] [Bayesian Methods for Data Analysis](https://www.routledge.com/Bayesian-Methods-for-Data-Analysis/Louis/p/book/9781584886976?srsltid=AfmBOop9-MGtcimSIt0z-dGXB8pHfh3flou_gCuLbwDV67C5UOFp1JHl)
+- [@gelman2006data] This is too is a classic book on data analysis using regression and multilevel/hierarchical models. I read this one may years ago and is fairly approachable and recommended - unless the next edition has come out?
+
+## Mixture Models 
+
+- [@frühwirth2006finite] [Finite Mixture and Markov Switching Models]() by Sylvia Frühwirth-Schnatter. This book is a comprehensive introduction to finite mixture and Markov switching models and covers a wide range of topics in mixture modeling, computation, and inference. The book is suitable for graduate students and researchers in statistics, computer science, and related fields.
+
+## Non parametric Bayesian Statistics
+
+- [@Hjort_Holmes_Müller_Walker_2010] "Bayesian Nonparametrics" by Peter M. Hjort, Chris Holmes, Maria E. Müller, and Stephen G. Walker. This book is a comprehensive introduction to Bayesian nonparametric methods and covers a wide range of topics in nonparametric modeling, computation, and inference. The book is suitable for graduate students and researchers in statistics, computer science, and related fields.
 
 ## Bayesian Time Series Bibliography
 
@@ -74,7 +98,7 @@ For example we look at EKG data which the authors have been working on for years
 
 Once this course is done I will probably want to dive deeper into the subject and try to devote more time to other models in the book.
 
-<hr>
+
 
 ### Bayesian Forecasting and Dynamic Models 
 
@@ -101,7 +125,7 @@ c.f. [@west2013bayesian]
 In this book we are concerned with Bayesian learning and forecast ing in dynamic environments. We describe the structure and theory of classes of dynamic models, and their uses in Bayesian forecasting. The principles, models and methods of Bayesian forecasting have been developed extensively during the last twenty years. This development has involved thorough investigation of mathematical and statistical aspects of forecasting models and related techniques. With this has come experience with application in a variety of areas in commercial and industrial, scientific and socio-economic fields. In deed much of the technical development has been driven by the needs of forecasting practitioners. As a result, there now exists a relatively complete statistical and mathematical framework, although much of this is either not properly documented or not easily accessible. Our primary goals in writing this book have been to present our view of this approach to modelling and forecasting, and to provide a reasonably complete text for advanced university students and research workers. The text is primarily intended for advanced undergraduate and postgraduate students in statistics and mathematics. In line with this objective we present thorough discussion of mathematical and statistical features of Bayesian analyses of dynamic models, with illustrations, examples and exercises in each Chapter.
 -->
 
-<hr>
+
 
 ### Practical Time Series Analysis 
 
@@ -137,7 +161,6 @@ c.f. [@nielsen2019practical]
 - Evaluate accuracy and performance
 
 
-<hr>
 
 #### "Machine Learning: A Bayesian and Optimization Perspective" by Sergios Theodoridis. 
 
@@ -167,7 +190,7 @@ The book builds carefully from the basic classical methods to the most recent tr
 - Case studies - protein folding prediction, optical character recognition, text authorship identification, fMRI data analysis, change point detection, hyperspectral image unmixing, target localization, channel equalization and echo cancellation, show how the theory can be applied.
 - MATLAB code for all the main algorithms are available on an accompanying website, enabling the reader to experiment with the code.
 
-<hr>
+
 
 #### Statistical Analysis in Climate Research 
 
@@ -193,7 +216,7 @@ I came across this book while looking into the Durban-Levinson recursion and the
 - Francis W. Zwiers is Chief of the Canadian Centre for Climate Modelling and Analysis, Atmospheric Environment Service, Victoria, Canada, and an Adjunct Professor at the Department of Mathematicw and Statistics of the University of Victoria.
 
 
-<hr>
+
 ### Bayesian Modeling and Computation in Python
 
 c.f. [@BMCP2021]
@@ -206,7 +229,6 @@ This is a great resource for translating what we  learned to Python.
 
  I found the chapter on state space modeling and the Kalman filter particularly useful. The book is a great resource for translating what we learned in the course to Python. The book is suitable for undergraduate students in statistics, computer science, and related fields.
 
-<hr>
 
 ### Bayesian Data Analysis 
 
@@ -230,7 +252,7 @@ Although this is not a time series book, the authors have been intersted in the 
 - Audience: The book is suitable for graduate students and researchers in statistics, computer science, and related fields.
 - An electronic version of the third eddition book is available at [Bayesian Data Analysis](http://www.stat.columbia.edu/~gelman/book/)
 
-<hr>
+
 
 ### Introductory Time Series with R c.f. [@cowpertwait2009introductory]
 
@@ -250,7 +272,6 @@ Although this is not a time series book, the authors have been intersted in the 
 >
 - Andrew Metcalfe is an associate professor in the School of Mathematical Sciences at the University of Adelaide, and an author of six statistics text books and numerous research papers. Both authors have extensive experience of teaching time series to students at all levels.
 
-<hr>
 
 ### Analysis of Integrated and Cointegrated Time Series with R c.f. 
 
