--- a/references.bib
+++ b/references.bib
@@ -137,15 +137,28 @@ year = {2020}
   url = {https://books.google.co.il/books?id=wJ0jEAAAQBAJ},
   lccn = 2020024770,
 }
+
+
 @book{gelman2013bayesian,
-  title = {Bayesian Data Analysis},
-  author = {Gelman, Andrew and Carlin, John and Stern, Hal and Dunson, David and Vehtari, Aki and Rubin, Donald},
-  year = 2013,
-  month = 11,
-  pages = {},
-  doi = {10.1201/b16018},
-  isbn = 9780429113079,
+  title={Bayesian Data Analysis, Third Edition},
+  author={Gelman, A. and Carlin, J.B. and Stern, H.S. and Dunson, D.B. and Vehtari, A. and Rubin, D.B.},
+  isbn={9781439840955},
+  lccn={2013039507},
+  series={Chapman \& Hall/CRC Texts in Statistical Science},
+  year={2013},
+  publisher={Taylor \& Francis}
 }
+
+@book{gelman2006data,
+  title={Data Analysis Using Regression and Multilevel/Hierarchical Models},
+  author={Gelman, A. and Hill, J.},
+  isbn={9781139460934},
+  series={Analytical Methods for Social Research},
+  url={https://books.google.co.il/books?id=c9xLKzZWoZ4C},
+  year={2006},
+  publisher={Cambridge University Press}
+}
+
 @article{good1953population,
   title = "The population frequencies of species and the estimation of population parameters",
   author = {Good, I. J.},
@@ -1179,16 +1192,7 @@ note = "Accessed 11/02/16",
 }
 
 
-@book{gelman2013bayesian,
-  title={Bayesian Data Analysis, Third Edition},
-  author={Gelman, A. and Carlin, J.B. and Stern, H.S. and Dunson, D.B. and Vehtari, A. and Rubin, D.B.},
-  isbn={9781439840955},
-  lccn={2013039507},
-  series={Chapman \& Hall/CRC Texts in Statistical Science},
-  url={https://books.google.co.il/books?id=ZXL6AQAAQBAJ},
-  year={2013},
-  publisher={Taylor \& Francis}
-}
+
 
 @book{nielsen2019practical,
   title={Practical Time Series Analysis: Prediction with Statistics and Machine Learning},
@@ -1350,3 +1354,87 @@ note = "Accessed 11/02/16",
   year={2013},
   publisher={Springer New York}
 }
+
+
+@article{spiegelhalter2002MeasuresOfModelComplexity,
+    author = {Spiegelhalter, David J. and Best, Nicola G. and Carlin, Bradley P. and Van Der Linde, Angelika},
+    title = {Bayesian Measures of Model Complexity and Fit},
+    journal = {Journal of the Royal Statistical Society Series B: Statistical Methodology},
+    volume = {64},
+    number = {4},
+    pages = {583-639},
+    year = {2002},
+    month = {10},
+    abstract = {We consider the problem of comparing complex hierarchical models in which the number of parameters is not clearly defined. Using an information theoretic argument we derive a measure pD for the effective number of parameters in a model as the difference between the posterior mean of the deviance and the deviance at the posterior means of the parameters of interest. In general pD approximately corresponds to the trace of the product of Fisher's information and the posterior covariance, which in normal models is the trace of the ‘hat’ matrix projecting observations onto fitted values. Its properties in exponential families are explored. The posterior mean deviance is suggested as a Bayesian measure of fit or adequacy, and the contributions of individual observations to the fit and complexity can give rise to a diagnostic plot of deviance residuals against leverages. Adding pD to the posterior mean deviance gives a deviance information criterion for comparing models, which is related to other information criteria and has an approximate decision theoretic justification. The procedure is illustrated in some examples, and comparisons are drawn with alternative Bayesian and classical proposals. Throughout it is emphasized that the quantities required are trivial to compute in a Markov chain Monte Carlo analysis.},
+    issn = {1369-7412},
+    doi = {10.1111/1467-9868.00353},
+    url = {https://doi.org/10.1111/1467-9868.00353},
+    eprint = {https://academic.oup.com/jrsssb/article-pdf/64/4/583/49723641/jrsssb\_64\_4\_583.pdf},
+}
+
+
+@book{lunn2012bugs,
+  title={The BUGS Book: A Practical Introduction to Bayesian Analysis},
+  author={Lunn, D. and Jackson, C. and Best, N. and Thomas, A. and Spiegelhalter, D.},
+  isbn={9781584888499},
+  lccn={2012026280},
+  series={Chapman \& Hall/CRC Texts in Statistical Science},
+  url={https://books.google.co.il/books?id=Cthz3XMa_VQC},
+  year={2012},
+  publisher={Taylor \& Francis}
+}
+
+@book{carlin2008bayesian,
+  title={Bayesian Methods for Data Analysis},
+  author={Carlin, B.P. and Louis, T.A.},
+  isbn={9781584886983},
+  series={Chapman \& Hall/CRC Texts in Statistical Science},
+  url={https://books.google.co.il/books?id=GTJUt8fcFx8C},
+  year={2008},
+  publisher={CRC Press}
+}
+
+@book{agresti2012categorical,
+  title={Categorical Data Analysis},
+  author={Agresti, A.},
+  isbn={9780470463635},
+  lccn={2012009792},
+  series={Wiley Series in Probability and Statistics},
+  url={https://books.google.co.il/books?id=UOrr47-2oisC},
+  year={2012},
+  publisher={Wiley}
+}
+
+@book{banerjee2026hierarchical,
+  title={Hierarchical Modeling and Analysis for Spatial Data},
+  author={Banerjee, S. and Gelfand, A.E. and Carlin, B.P.},
+  isbn={9781032513324},
+  lccn={2025015650},
+  url={https://books.google.co.il/books?id=GRFT0QEACAAJ},
+  year={2026},
+  publisher={CRC Press LLC}
+}
+
+
+@book{carlin2008bayesian,
+  title={Bayesian Methods for Data Analysis},
+  author={Carlin, B.P. and Louis, T.A.},
+  isbn={9781584886983},
+  series={Chapman \& Hall/CRC Texts in Statistical Science},
+  url={https://books.google.co.il/books?id=GTJUt8fcFx8C},
+  year={2008},
+  publisher={CRC Press}
+}
+
+@book{frühwirth2006finite,
+  title={Finite Mixture and Markov Switching Models},
+  author={Fr{\"u}hwirth-Schnatter, S.},
+  isbn={9780387357683},
+  lccn={2006923106},
+  series={Springer Series in Statistics},
+  url={https://books.google.co.il/books?id=f8KiI7eRjYoC},
+  year={2006},
+  publisher={Springer New York}
+}
+
+@book{Hjort_Holmes_Müller_Walker_2010, place={Cambridge}, series={Cambridge Series in Statistical and Probabilistic Mathematics}, title={Bayesian Nonparametrics}, publisher={Cambridge University Press}, year={2010}, collection={Cambridge Series in Statistical and Probabilistic Mathematics}}
