more indexing, metadata cleanups and HC fencing

--- a/C1-L04.qmd
+++ b/C1-L04.qmd
@@ -11,6 +11,23 @@ keywords:
   - Binomial Distribution
 ---
 
+Before delving into Bayesian inference in the next module, in this module we will review inference in the frequentist approach.
+Much of the material was developed by R. A. Fischer in the last century. Some of the central ideas and tools of this approach include:
+
+- Maximum Likelihood estimates MLE, which are point estimates of statistics.
+- Confidence intervals CIs which formalize uncertainty in this paradigm.
+- Likelihood functions and Log-likelihood functions which are the basis of MLE estimates.
+- Quantile Functions
+- Hypothesis testing
+- Reference Population
+
+One point of interest is how much of this work is based on the law of large numbers, central limit theorem and the empirical rule, three related key results in probability theory.
+
+However the second point to stress is that the **frequentist paradigm** is fraught with practical as well as philosophical challenges which are handled better to some extent within the Bayesian paradigm. 
+
+In particular, the frequentist paradigm does not allow us to make probability statements about parameters, which is a key feature of the Bayesian approach.
+
+
 ## Confidence Intervals {#sec-confidence-intervals}
 
 ![frequentist approach to confidence intervals](images/c1l04-ss-01-confidence-intervals.png){#fig-frequentist-ci .column-margin width="200px"}
@@ -27,6 +44,8 @@ Under the **frequentist paradigm**, one views the data as a **random sample** fr
 ::: {#exm-frequentist-coinflip}
 ### Coin Flip Example - Central Limit Theorem
 
+\index{Confidence Interval}
+\index{Frequentist Inference}
 Suppose we flip a coin 100 times. And we get **44 heads** and **56 tails**. We can view these 100 flips as a random sample from a much larger infinite hypothetical population of flips from this coin. We can say that each flip is $X_i$ an RV which follows a *Bernoulli distribution* with some probability $p$. In this case $p$ is unknown, but we can assume it is fixed since we are using a specific physical coin.
 
 $$
@@ -41,9 +60,10 @@ We ask :
 To estimate $p$ we will apply the **Central limit theorem** c.f. [@thm-clt] which states that the mean of a large number of IID RV with mean $\mu$ and variance $\sigma^2$ is approximately $N(\mu,\sigma^2)$.
 
 $$
-\sum^{100}_{i=1} X_i\mathrel{\dot \sim } N(100 \enspace p, 100 \enspace \mathbb{P}r(1-p))
+\sum^{100}_{i=1} X_i\mathrel{\dot \sim } \mathcal{N}(100 \enspace p, 100 \enspace \mathbb{P}r(1-p))
 $$ {#eq-cointoss-clt}
 
+\index{Central Limit Theorem}
 Given that this is a **Normal distribution**, we can use the *empirical rule* often called the *68-95-99.7 rule* see [@enwiki-empirical], that says 95% of the time we will get a result is in within 1.96 standard deviations of the mean. This is referred to as a *Confidence Interval* or (CI).
 
 $$
@@ -240,20 +260,20 @@ $$ {#eq-exp-likelihood-derivation}
 Now the likelihood function is
 
 $$
-L(\lambda \mid x)=\lambda^ne^{-\lambda \sum{x_i}}
+\mathcal{L}(\lambda \mid x)=\lambda^ne^{-\lambda \sum{x_i}}
 $$ {#eq-exp-likelihood-fn}
 
 the log likelihood is
 
 $$
-\mathcal{L}(\lambda) = n\ln{\lambda} - \lambda\sum_i{x_i}
+\ell(\lambda) = n\ln{\lambda} - \lambda\sum_i{x_i}
 $$ {#eq-exp-log-likelihood-fn}
 
 Taking the derivative
 
 $$
 \begin{aligned}
-  \mathcal{L}^\prime(\lambda) &= \frac{n}{\lambda} - \sum_i{x_i} \stackrel{\text{set}}{=}0 && \text {(set derivative = 0)}
+  \ell^\prime(\lambda) &= \frac{n}{\lambda} - \sum_i{x_i} \stackrel{\text{set}}{=}0 && \text {(set derivative = 0)}
 \\ \implies \frac{n}{\hat{\lambda}} &= \sum_i{x_i} && \text{(rearranging)}
 \end{aligned}
 $$ {#eq-exp-log-likelihood-derivative}
