--- a/A12.qmd
+++ b/A12.qmd
@@ -50,9 +50,9 @@ At the end of the course there is a handout called further reading.
 In this course the following titles are recommended for further reading and reference, unfortunately some of the links were out of date.
 
 - [@kruschke2011doing] "Doing Bayesian Data Analysis" this is perhaps the favorite on Bayesian statistics. It is a great book for learning Bayesian statistics and covers a wide range of topics in Bayesian modeling, computation, and inference. The book is suitable for graduate students and researchers in statistics, computer science, and related fields.
-- [@McElreath2020Rethinking] "[Statistical Rethinking: A Bayesian Course with Examples in R and Stan](https://xcelab.net/rm/)" by Richard McElreath is prehaps, the runner up in terms of a popular book on Bayesian Statistics. This book is a great resource for learning Bayesian statistics and covers a wide range of topics in Bayesian modeling, computation, and inference. The book is suitable for graduate students and researchers in statistics, computer science, and related fields. McElreath is a gifted and entertaining explainer but he is not a full-fleged statistician and I find that in most cases the examples in this book are rather weak and challanging to adapt to real life settings.
-- [@gelman2013bayesian] "[Bayesian Data Analysis](https://sites.stat.columbia.edu/gelman/book/)" by Andrew Gelman, John B. Carlin, Hal S. Stern, David B. Dunson, Aki Vehtari, Donald B. Rubin. This book is considered the classic Graduate level text on Bayesian statistics and covers a wide range of topics in Bayesian data analysis. The book is suitable for graduate students and researchers in statistics, computer science, and related fields. This book is harder to read than the previous two books. I'd recommend reading and viewing McElreath's book first and only then moving to this book.
-- [@lunn2012bugs] "The BUGS book" is a classic text on Bayesian statistics and covers a wide range of topics in Bayesian modeling, computation, and inference.
+- [@McElreath2020Rethinking] [Statistical Rethinking: A Bayesian Course with Examples in R and Stan](https://xcelab.net/rm/) by Richard McElreath is prehaps, the runner up in terms of a popular book on Bayesian Statistics. This book is a great resource for learning Bayesian statistics and covers a wide range of topics in Bayesian modeling, computation, and inference. The book is suitable for graduate students and researchers in statistics, computer science, and related fields. McElreath is a gifted and entertaining explainer but he is not a full-fledged statistician and I find that in most cases the examples in this book are rather weak and challenging to adapt to real life settings.
+- [@gelman2013bayesian] [Bayesian Data Analysis](https://sites.stat.columbia.edu/gelman/book/) by Andrew Gelman, John B. Carlin, Hal S. Stern, David B. Dunson, Aki Vehtari, Donald B. Rubin. This book is considered the classic Graduate level text on Bayesian statistics and covers a wide range of topics in Bayesian data analysis. The book is suitable for graduate students and researchers in statistics, computer science, and related fields. This book is harder to read than the previous two books. I'd recommend reading and viewing McElreath's book first and only then moving to this book.
+- [@lunn2012bugs] [The BUGS book: A Practical Introduction to Bayesian Analysis](https://www.routledge.com/The-BUGS-Book-A-Practical-Introduction-to-Bayesian-Analysis/Lunn-Jackson-Best-Thomas-Spiegelhalter/p/book/9781584888499?srsltid=AfmBOooQseXfF1NIhG8GlqCfzQdUHQLR7ytM3OuyPFsiwZUm11Hi1A_y) is a classic text on Bayesian statistics and covers a wide range of topics in Bayesian modeling, computation, and inference. IT focuses on simulation using BUGS.
 - [@carlin2008bayesian] Bayesian Methods for Data Analysis
 - [@agresti2012categorical] This is a graduate level book on categorical data which often poses extra challenges for Bayesian statistics. Section 17.5 covers Bayesian methods for Categorical Data.
 - [@spiegelhalter2002MeasuresOfModelComplexity] "Measures of Model Complexity and Fit" by David Spiegelhalter, Andrew Thomas, Nicky Best, and W. Brian Gilks. This paper considers the problem of model selection in Bayesian Hierarchical Models and proposes a new measure of model complexity and fit, the Deviance Information Criterion (DIC). 
