--- a/A12.qmd
+++ b/A12.qmd
@@ -36,8 +36,8 @@ Here are some of the most popular books on R and Python:
 ## Books in Python
 
 - [@james2013introduction] [An Introduction to Statistical Learning with python](https://www.statlearning.com/) by Gareth James, Daniela Witten, Trevor Hastie, and Robert Tibshirani
--  [Python for Data Analysis](https://wesmckinney.com/book/) by Wes McKinney of Pandas infamy  parquet and Apache Arrow
-- [Python Data Science Handbook](https://jakevdp.github.io/PythonDataScienceHandbook/) by Jake VanderPlas
+- [@mckinney2022python] [Python for Data Analysis](https://wesmckinney.com/book/) by Wes McKinney of Pandas infamy  parquet and Apache Arrow
+- [@vanderplas2016python] [Python Data Science Handbook](https://jakevdp.github.io/PythonDataScienceHandbook/) by Jake VanderPlas
 - [Think Stats](https://greenteapress.com/thinkstats2/thinkstats2.pdf) by Allen B. Downey
 - [Think Bayes](https://greenteapress.com/thinkbayes2/thinkbayes2.pdf) by Allen B. Downey
 - [Probabilistic Programming & Bayesian Methods for Hackers
@@ -49,13 +49,36 @@ Here are some of the most popular books on R and Python:
 At the end of the course there is a handout called further reading. 
 In this course the following titles are recommended for further reading and reference, unfortunately some of the links were out of date.
 
-- [@kruschke2011doing] "Doing Bayesian Data Analysis" this is perhaps the favorite on Bayesian statistics. It is a great book for learning Bayesian statistics and covers a wide range of topics in Bayesian modeling, computation, and inference. The book is suitable for graduate students and researchers in statistics, computer science, and related fields.
-- [@McElreath2020Rethinking] [Statistical Rethinking: A Bayesian Course with Examples in R and Stan](https://xcelab.net/rm/) by Richard McElreath is prehaps, the runner up in terms of a popular book on Bayesian Statistics. This book is a great resource for learning Bayesian statistics and covers a wide range of topics in Bayesian modeling, computation, and inference. The book is suitable for graduate students and researchers in statistics, computer science, and related fields. McElreath is a gifted and entertaining explainer but he is not a full-fledged statistician and I find that in most cases the examples in this book are rather weak and challenging to adapt to real life settings.
-- [@gelman2013bayesian] [Bayesian Data Analysis](https://sites.stat.columbia.edu/gelman/book/) by Andrew Gelman, John B. Carlin, Hal S. Stern, David B. Dunson, Aki Vehtari, Donald B. Rubin. This book is considered the classic Graduate level text on Bayesian statistics and covers a wide range of topics in Bayesian data analysis. The book is suitable for graduate students and researchers in statistics, computer science, and related fields. This book is harder to read than the previous two books. I'd recommend reading and viewing McElreath's book first and only then moving to this book.
+
+![Doing Bayesian Data Analysis](images/book-DBA.jpg){#fig-DBA .column-margin width="150px"}
+
+- [@kruschke2011doing] [Doing Bayesian Data Analysis](https://sites.google.com/site/doingbayesiandataanalysis/) this is the favorite on Bayesian statistics. It is a great book for learning Bayesian statistics and covers a wide range of topics in Bayesian modeling, computation, and inference. The book is suitable for graduate students and researchers in statistics, computer science, and related fields.
+- This text is recommended for further reading in the course 2
+
+
+![Statistical Rethinking](images/book-SR.jpg){#fig-SR .column-margin width="150px"}
+
+- [@McElreath2020Rethinking] [Statistical Rethinking: A Bayesian Course with Examples in R and Stan](https://xcelab.net/rm/) by Richard McElreath is, the runner up in terms of a popular book on Bayesian Statistics. This book is a great resource for learning Bayesian statistics and covers a wide range of topics in Bayesian modeling, computation, and inference. The book is suitable for graduate students and researchers in statistics, computer science, and related fields. McElreath is a gifted and entertaining explainer but he is not a full-fledged statistician and I find that in most cases the examples in this book are rather weak and challenging to adapt to real life settings.
+- This text is recommended for further reading in the course 2
+
+![Bayesian Data Analysis](images/book-BDA.jpg){#fig-BDA .column-margin width="150px"}
+
+- [@gelman2013bayesian] [Bayesian Data Analysis](https://sites.stat.columbia.edu/gelman/book/) by Andrew Gelman, John B. Carlin, Hal S. Stern, David B. Dunson, Aki Vehtari, Donald B. Rubin. This book is considered the classic Graduate level text on Bayesian statistics and covers a wide range of topics in Bayesian data analysis. The book is suitable for graduate students and researchers in statistics, computer science, and related fields. This book is harder to read than the previous two books. I'd recommend reading and viewing McElreath's book first and only then moving to this book. 
+- This text is is recommended for further reading in the course 2 but with the causion that a solid background in calculus-based probability is useful, as many details are left to the reader.
+
+- This text is recommended for further reading in the course 2
+
+![The BUGS book](images/book-BUGS.png){#fig-BUGS .column-margin width="150px"}
+
 - [@lunn2012bugs] [The BUGS book: A Practical Introduction to Bayesian Analysis](https://www.routledge.com/The-BUGS-Book-A-Practical-Introduction-to-Bayesian-Analysis/Lunn-Jackson-Best-Thomas-Spiegelhalter/p/book/9781584888499?srsltid=AfmBOooQseXfF1NIhG8GlqCfzQdUHQLR7ytM3OuyPFsiwZUm11Hi1A_y) is a classic text on Bayesian statistics and covers a wide range of topics in Bayesian modeling, computation, and inference. IT focuses on simulation using BUGS.
+- This text is recommended for further reading in the course 2
+
 - [@carlin2008bayesian] Bayesian Methods for Data Analysis
+
 - [@agresti2012categorical] This is a graduate level book on categorical data which often poses extra challenges for Bayesian statistics. Section 17.5 covers Bayesian methods for Categorical Data.
+
 - [@spiegelhalter2002MeasuresOfModelComplexity] "Measures of Model Complexity and Fit" by David Spiegelhalter, Andrew Thomas, Nicky Best, and W. Brian Gilks. This paper considers the problem of model selection in Bayesian Hierarchical Models and proposes a new measure of model complexity and fit, the Deviance Information Criterion (DIC). 
+
 - [@banerjee2026hierarchical] "[Hierarchical Modeling and Analysis for Spatial Data](https://www.routledge.com/Hierarchical-Modeling-and-Analysis-for-Spatial-Data/Banerjee-Carlin-Gelfand/p/book/9781439819173)" by Sudipto Banerjee, Bradley P. Carlin, and Alan E. Gelfand. This book is a comprehensive introduction to hierarchical modeling and analysis for spatial data and covers a wide range of topics in spatial statistics, computation, and inference. The book is suitable for graduate students and researchers in statistics, computer science, and related fields. [data etc](https://www.counterpointstat.com/hierarchical-modeling-and-analysis-for-spatial-data.html/)
 - [@carlin2008bayesian] [Bayesian Methods for Data Analysis](https://www.routledge.com/Bayesian-Methods-for-Data-Analysis/Louis/p/book/9781584886976?srsltid=AfmBOop9-MGtcimSIt0z-dGXB8pHfh3flou_gCuLbwDV67C5UOFp1JHl)
 - [@gelman2006data] This is too is a classic book on data analysis using regression and multilevel/hierarchical models. I read this one may years ago and is fairly approachable and recommended - unless the next edition has come out?
@@ -72,25 +95,11 @@ In this course the following titles are recommended for further reading and refe
 
 We start with some books from the course, I collected here both the recommended books and some others that I found useful.
 
-### Time Series: Modeling, Computation, and Inference 
+![Time Series: Modeling, Computation, and Inference](images/book-TSMCI.jpg){#fig-TSMCI .column-margin width="150px"}
 
-c.f. [@prado2023time]
+[@prado2023time] [Time Series: Modeling, Computation, and Inference](https://www.routledge.com/Time-Series-Modeling-Computation-and-Inference-Second-Edition/Prado-Ferreira-West/p/book/9781032040042?srsltid=AfmBOoodi-xrmkceGPPFHNhIQHiiLpaXEgd8fi2kdG7WNb-w1gYvWe4-) by course instructor Raquel Prado. This book, now in its second edition is a comprehensive introduction to time series analysis and covers a wide range of topics in time series modeling, computation, and inference. The book is suitable for graduate students and researchers in statistics, computer science, and related fields. 
 
-![Time Series: Modeling, Computation, and Inference](images/prado2023time.jpg){.column-margin width="150px"}
-
-
-- Title:Time Series: Modeling, Computation, and Inference
-- ISBN:9781032040042, 1032040041
-- Page count:452
-- Published:September 2023
-- Format:Paperback
-- Publisher:CRC Press
-- Authors: Raquel Prado, Marco A. R. Ferreira, Mike West
-
-[@prado2023time] **"Time Series: Modeling, Computation, and Inference"** by course instructor Raquel Prado. This book, now in its second edition is a comprehensive introduction to time series analysis and covers a wide range of topics in time series modeling, computation, and inference. The book is suitable for graduate students and researchers in statistics, computer science, and related fields. 
-
-While learning this course I found some of the material harder to follow than I expected. The books helped to clarify definitions and so on however the book is  
-rather comprehensive and mathematically advanced unlike some other books on statistics. 
+While learning this course I found some of the material harder to follow than I expected. The books helped to clarify definitions and so on however the book is  rather comprehensive and mathematically advanced unlike some other books on statistics. 
 
 The teacher frequently point out that many aspects of Times series and are beyond the scope of the course. Yet this book covers much more ground like unequally spaced time series and vector valued time series. 
 
@@ -98,14 +107,24 @@ For example we look at EKG data which the authors have been working on for years
 
 Once this course is done I will probably want to dive deeper into the subject and try to devote more time to other models in the book.
 
+- Title:Time Series: Modeling, Computation, and Inference
+- Authors: Raquel Prado, Marco A. R. Ferreira, Mike West
+- ISBN:9781032040042, 1032040041
+- Page count:452
+- Published:September 2023
+- Format:Paperback
+- Publisher:CRC Press
 
-
-### Bayesian Forecasting and Dynamic Models 
 
 c.f. [@west2013bayesian]
 
-![Bayesian Forecasting and Dynamic Models](images/west2013bayesian.png){.column-margin width="150px"}
+![Bayesian Forecasting and Dynamic Models](images/book-BFADM.png){#fig-BFADM .column-margin width="150px"}
 
+[@west2013bayesian] **"Bayesian Forecasting and Dynamic Models"** by Mike West and Jeff Harrison. This book is a classic text on Bayesian statistics and covers a wide range of topics in Bayesian forecasting and dynamic models. The following is the description from the publisher:
+
+> The use of dynamic models in the forecasting of time series data has a long history, with the development of autoregressive integrated moving average (ARIMA) models and state space models. However, the use of Bayesian methods in the development of dynamic models is a relatively recent development. This book provides a comprehensive introduction to the use of Bayesian methods in the development of dynamic models for forecasting time series data. The book covers a wide range of topics, including the use of dynamic models in the analysis of time series data, the use of Bayesian methods in the development of dynamic models, and the use of dynamic models in the forecasting of time series data. 
+
+- Audience: The book is suitable for graduate students and researchers in statistics, computer science, and related fields.
 
 - Title:Bayesian Forecasting and Dynamic Models
 - ISBN:9781475770971, 1475770979
@@ -114,13 +133,6 @@ c.f. [@west2013bayesian]
 - Format:Paperback
 - Publisher:Springer New York
 - Author:Mike West, Jeff Harrison
-
-[@west2013bayesian] **"Bayesian Forecasting and Dynamic Models"** by Mike West and Jeff Harrison. This book is a classic text on Bayesian statistics and covers a wide range of topics in Bayesian forecasting and dynamic models. The following is the description from the publisher:
-
-> The use of dynamic models in the forecasting of time series data has a long history, with the development of autoregressive integrated moving average (ARIMA) models and state space models. However, the use of Bayesian methods in the development of dynamic models is a relatively recent development. This book provides a comprehensive introduction to the use of Bayesian methods in the development of dynamic models for forecasting time series data. The book covers a wide range of topics, including the use of dynamic models in the analysis of time series data, the use of Bayesian methods in the development of dynamic models, and the use of dynamic models in the forecasting of time series data. 
-
-- Audience: The book is suitable for graduate students and researchers in statistics, computer science, and related fields.
-
 <!--
 In this book we are concerned with Bayesian learning and forecast ing in dynamic environments. We describe the structure and theory of classes of dynamic models, and their uses in Bayesian forecasting. The principles, models and methods of Bayesian forecasting have been developed extensively during the last twenty years. This development has involved thorough investigation of mathematical and statistical aspects of forecasting models and related techniques. With this has come experience with application in a variety of areas in commercial and industrial, scientific and socio-economic fields. In deed much of the technical development has been driven by the needs of forecasting practitioners. As a result, there now exists a relatively complete statistical and mathematical framework, although much of this is either not properly documented or not easily accessible. Our primary goals in writing this book have been to present our view of this approach to modelling and forecasting, and to provide a reasonably complete text for advanced university students and research workers. The text is primarily intended for advanced undergraduate and postgraduate students in statistics and mathematics. In line with this objective we present thorough discussion of mathematical and statistical features of Bayesian analyses of dynamic models, with illustrations, examples and exercises in each Chapter.
 -->
@@ -131,15 +143,9 @@ In this book we are concerned with Bayesian learning and forecast ing in dynamic
 
 c.f. [@nielsen2019practical]
 
-![Practical Times Series Analysis](images/nielsen2019practical.jpg){.column-margin width="150px"}
+![Practical Times Series Analysis](images/book-PTSA.jpg){#fig-PTSA .column-margin width="150px"}
 
 
-- Title:Practical Time Series Analysis: Prediction with Statistics and Machine Learning
-- ISBN:1492041602, 9781492041603
-- Page count:504
-- Published:2019
-- Format:Paperback
-- Publisher:O'Reilly Media, Inc.
 
 - [@nielsen2019practical] "Practical Time Series Analysis: Prediction with Statistics and Machine Learning" by Aileen Nielsen. Is a good resource for parctionars getting started with time series analysis. I also recommend any videos by Aileen Nielsen on the subject.
 
@@ -160,11 +166,12 @@ c.f. [@nielsen2019practical]
 - Forecast and classify time series with machine or deep learning
 - Evaluate accuracy and performance
 
-
-
-#### "Machine Learning: A Bayesian and Optimization Perspective" by Sergios Theodoridis. 
-
-c.f. [@theodoridis2015ML]
+- Title:Practical Time Series Analysis: Prediction with Statistics and Machine Learning
+- ISBN:1492041602, 9781492041603
+- Page count:504
+- Published:2019
+- Format:Paperback
+- Publisher:O'Reilly Media, Inc.
 
 
 ![Machine Learning: A Bayesian and Optimization Perspective](images/theodoridis2015ML.png){.column-margin width="150px"}
@@ -182,9 +189,8 @@ c.f. [@theodoridis2015ML]
  I came across this book while looking into the Durban-Levinson recursion and the Yule-Walker equations. So far I haven't had time to read it but it looks like a good book on machine learning. The following is the description from the publisher:
 
 > This tutorial text gives a unifying perspective on machine learning by covering both probabilistic and deterministic approaches -which are based on optimization techniques - together with the Bayesian inference approach, whose essence lies in the use of a hierarchy of probabilistic models. The book presents the major machine learning methods as they have been developed in different disciplines, such as statistics, statistical and adaptive signal processing and computer science. Focusing on the physical reasoning behind the mathematics, all the various methods and techniques are explained in depth, supported by examples and problems, giving an invaluable resource to the student and researcher for understanding and applying machine learning concepts.
->
-The book builds carefully from the basic classical methods to the most recent trends, with chapters written to be as self-contained as possible, making the text suitable for different courses: pattern recognition, statistical/adaptive signal processing, statistical/Bayesian learning, as well as short courses on sparse modeling, deep learning, and probabilistic graphical models.
->
+> The book builds carefully from the basic classical methods to the most recent trends, with chapters written to be as self-contained as possible, making the text suitable for different courses: pattern recognition, statistical/adaptive signal processing, statistical/Bayesian learning, as well as short courses on sparse modeling, deep learning, and probabilistic graphical models.
+
 - All major classical techniques: Mean/Least-Squares regression and filtering, Kalman filtering, stochastic approximation and online learning, Bayesian classification, decision trees, logistic regression and boosting methods.
 - The latest trends: Sparsity, convex analysis and optimization, online distributed algorithms, learning in RKH spaces, Bayesian inference, graphical and hidden Markov models, particle filtering, deep learning, dictionary learning and latent variables modeling.
 - Case studies - protein folding prediction, optical character recognition, text authorship identification, fMRI data analysis, change point detection, hyperspectral image unmixing, target localization, channel equalization and echo cancellation, show how the theory can be applied.
@@ -192,12 +198,17 @@ The book builds carefully from the basic classical methods to the most recent tr
 
 
 
-#### Statistical Analysis in Climate Research 
-
-c.f.[@von2002statistical]
-
 ![Statistical Analysis in Climate Research](images/von2002statistical.jpg){.column-margin width="150px" }
 
+
+
+[@von2002statistical] [Statistical Analysis in Climate Research]() I came across this book while looking into the Durban-Levinson recursion and the Yule-Walker equations. So far I haven’t had time to read it but it looks promising. Here is the description from the publisher:
+
+> Climatology is, to a large degree, the study of the statistics of our climate. The powerful tools of mathematical statistics therefore find wide application in climatological research. The purpose of this book is to help the climatologist understand the basic precepts of the statistician's art and to provide some of the background needed to apply statistical methodology correctly and usefully. The book is self contained: introductory material, standard advanced techniques, and the specialized techniques used specifically by climatologists are all contained within this one source. There are a wealth of real-world examples drawn from the climate literature to demonstrate the need, power and pitfalls of statistical analysis in climate research. Suitable for graduate courses on statistics for climatic, atmospheric and oceanic science, this book will also be valuable as a reference source for researchers in climatology, meteorology, atmospheric science, and oceanography.
+
+> Hans von Storch is Director of the Institute of Hydrophysics of the GKSS Research Centre in Geesthacht, Germany and a Professor at the Meteorological Institute of the University of Hamburg.
+
+> Francis W. Zwiers is Chief of the Canadian Centre for Climate Modelling and Analysis, Atmospheric Environment Service, Victoria, Canada, and an Adjunct Professor at the Department of Mathematics and Statistics of the University of Victoria.
 
 - Title:Statistical Analysis in Climate Research
 - ISBN:1139425099, 9781139425094
@@ -207,21 +218,12 @@ c.f.[@von2002statistical]
 - Publisher:Cambridge University Press
 - Authors: Hans von Storch, Francis W. Zwiers
 
-I came across this book while looking into the Durban-Levinson recursion and the Yule-Walker equations. So far I haven’t had time to read it but it looks promising. Here is the description from the publisher:
-
-> Climatology is, to a large degree, the study of the statistics of our climate. The powerful tools of mathematical statistics therefore find wide application in climatological research. The purpose of this book is to help the climatologist understand the basic precepts of the statistician's art and to provide some of the background needed to apply statistical methodology correctly and usefully. The book is self contained: introductory material, standard advanced techniques, and the specialised techniques used specifically by climatologists are all contained within this one source. There are a wealth of real-world examples drawn from the climate literature to demonstrate the need, power and pitfalls of statistical analysis in climate research. Suitable for graduate courses on statistics for climatic, atmospheric and oceanic science, this book will also be valuable as a reference source for researchers in climatology, meteorology, atmospheric science, and oceanography.
->
-- Hans von Storch is Director of the Institute of Hydrophysics of the GKSS Research Centre in Geesthacht, Germany and a Professor at the Meteorological Institute of the University of Hamburg.
->
-- Francis W. Zwiers is Chief of the Canadian Centre for Climate Modelling and Analysis, Atmospheric Environment Service, Victoria, Canada, and an Adjunct Professor at the Department of Mathematicw and Statistics of the University of Victoria.
-
-
 
 ### Bayesian Modeling and Computation in Python
 
 c.f. [@BMCP2021]
 
-![Bayesian Modeling and Computation in Python](images/BMCP2021.jpg){.column-margin width="150px" }
+![Bayesian Modeling and Computation in Python](images/book-BMCP.jpg){.column-margin width="150px" }
 
 
 This is a great resource for translating what we  learned to Python.
@@ -229,13 +231,15 @@ This is a great resource for translating what we  learned to Python.
 
  I found the chapter on state space modeling and the Kalman filter particularly useful. The book is a great resource for translating what we learned in the course to Python. The book is suitable for undergraduate students in statistics, computer science, and related fields.
 
+![Bayesian Data Analysis](images/book-BDA.jpg){.column-margin width="150px" }
 
-### Bayesian Data Analysis 
 
-c.f. [@gelman2013bayesian]
+[@gelman2013bayesian] "Bayesian Data Analysis" is probably the most famous book on Bayesian statistics. 
+This book is a classic text on Bayesian statistics and covers a wide range of topics in Bayesian data analysis. 
+Although this is not a time series book, the authors have been interested in the domain of political election prediction and have used time series data in their research and some of that is covered in the book's examples.
 
-![Bayesian Data Analysis](images/gelman2013bayesian.jpg){.column-margin width="150px" }
-
+- Audience: The book is suitable for graduate students and researchers in statistics, computer science, and related fields.
+- An electronic version of the third edition book is available at [Bayesian Data Analysis](http://www.stat.columbia.edu/~gelman/book/)
 
 - Title:Bayesian Data Analysis
 - ISBN:1439840954, 9781439840955
@@ -245,22 +249,10 @@ c.f. [@gelman2013bayesian]
 - Publisher:Chapman and Hall/CRC
 - Authors: Andrew Gelman, John B. Carlin, Hal S. Stern, David B. Dunson, Aki Vehtari, Donald B. Rubin
 
-[@gelman2013bayesian] "Bayesian Data Analysis" is probably the most famous book on Bayesian statistics. 
-This book is a classic text on Bayesian statistics and covers a wide range of topics in Bayesian data analysis. 
-Although this is not a time series book, the authors have been intersted in the domain of political election prediction and have used time series data in their research and some of that is covered in the book's examples.
-
-- Audience: The book is suitable for graduate students and researchers in statistics, computer science, and related fields.
-- An electronic version of the third eddition book is available at [Bayesian Data Analysis](http://www.stat.columbia.edu/~gelman/book/)
+![Introductory Time Series with R](images/book-ITSWR.jpg){.column-margin width="150px" }
 
 
-
-### Introductory Time Series with R c.f. [@cowpertwait2009introductory]
-
-![Introductory Time Series with R](images/cowpertwait2009introductory.jpg){.column-margin width="150px" }
-
-
-[@cowpertwait2009introductory]
-"Introductory Time Series with R" by Cowpertwait and Metcalfe, and the second is 
+[@cowpertwait2009introductory] "Introductory Time Series with R" by Cowpertwait and Metcalfe, and the second is 
 
 > Yearly global mean temperature and ocean levels, daily share prices, and the signals transmitted back to Earth by the Voyager space craft are all examples of sequential observations over time known as time series. This book gives you a step-by-step introduction to analyzing time series using the open source software R. Each time series model is motivated with practical applications, and is defined in mathematical notation. Once the model has been introduced it is used to generate synthetic data, using R code, and these generated data are then used to estimate its parameters. This sequence enhances understanding of both the time series model and the R function used to fit the model to data. Finally, the model is used to analyze observed data taken from a practical application. By using R, the whole procedure can be reproduced by the reader. 
 >
@@ -303,7 +295,7 @@ Although this is not a time series book, the authors have been intersted in the 
 
 ### Bayesian Inference for Stochastic Processes by Lyle D. Broemeling
 
-![Bayesian Inference for Stochastic Processes by Lyle D. Broemeling](images/broemeling2018bayesian.jpg){.column-margin width="150px" style="vertical-align: top;"  }
+![Bayesian Inference for Stochastic Processes by Lyle D. Broemeling](images/book-BIFSP.jpg){.column-margin width="150px" style="vertical-align: top;"  }
 
 
 - The code for R and WinBUGS is available at [code](http://www.lbroemeling.com/)
@@ -321,7 +313,7 @@ This is a very interesting book which covers a new approach to fitting time seri
 
 ### Statistics for Spatio-Temporal Data
 
- ![Statistics for Spatio-Temporal Data](images/cressie2011statistics.jpg){.column-margin width="150px" style="vertical-align: top;"  }
+ ![Statistics for Spatio-Temporal Data](images/book-SFSTD.jpg){.column-margin width="150px" style="vertical-align: top;"  }
 
 [@cressie2011statistics] is a book I came across when I tried to understand the NDLM model. NDLMs have a two level hierarchical form and it seems possible to extend this formulation will non-normally distributed shocks and possibly non linear relation. In this book the authors take an interesting approach of not only looking at NDLM as a hierarchical model but they also extend the time series model into a spatio-temporal model.
 
@@ -331,7 +323,7 @@ This book is a comprehensive introduction to the analysis of spatio-temporal dat
 
 c.f. [@rios2012bayesian]
 
-![Bayesian Analysis of Stochastic Process Models](images/rios2012bayesian.jpg){.column-margin width="150px" style="vertical-align: top;"  }
+![Bayesian Analysis of Stochastic Process Models](images/rios2012bayesian.jpg){.column-margin width="150px" style="vertical-align: top;"}
 
 
 David Rios Insua, Fabrizio Ruggeri, Michael P. Wiper
