--- a/references.bib
+++ b/references.bib
@@ -624,16 +624,17 @@ URL = {https://doi.org/10.1214/ss/1177012488}
     note = "[Online; accessed 18-April-2023]"
 }
 
-@book{vanderplas2016python,
-  title={Python Data Science Handbook: Essential Tools for Working with Data},
-  author={VanderPlas, J.},
-  isbn={9781491912133},
-  lccn={2017385426},
+  @book{vanderplas2016python,
+author = {VanderPlas, Jake},
+  title = {Python Data Science Handbook: Essential Tools for Working with Data},
+  year = {2016},
+  isbn = {1491912057},
+  lccn = {2017385426},
   url={https://jakevdp.github.io/PythonDataScienceHandbook/},
-  year={2016},
-  publisher={O'Reilly Media}
+  publisher = {O'Reilly Media, Inc.},
+  edition = {1st},
+  abstract = {For many researchers, Python is a first-class tool mainly because of its libraries for storing, manipulating, and gaining insight from data. Several resources exist for individual pieces of this data science stack, but only with the Python Data Science Handbook do you get them all IPython, NumPy, Pandas, Matplotlib, Scikit-Learn, and other related tools. Working scientists and data crunchers familiar with reading and writing Python code will find this comprehensive desk reference ideal for tackling day-to-day issues: manipulating, transforming, and cleaning data; visualizing different types of data; and using data to build statistical or machine learning models. Quite simply, this is the must-have reference for scientific computing in Python. With this handbook, youll learn how to use:IPython and Jupyter: provide computational environments for data scientists using PythonNumPy: includes the ndarray for efficient storage and manipulation of dense data arrays in PythonPandas: features the DataFrame for efficient storage and manipulation of labeled/columnar data in PythonMatplotlib: includes capabilities for a flexible range of data visualizations in PythonScikit-Learn: for efficient and clean Python implementations of the most important and established machine learning algorithms}
 }
-
   
 @book{bishop2013pattern,
   title={Pattern Recognition and Machine Learning},
@@ -1437,4 +1438,21 @@ note = "Accessed 11/02/16",
   publisher={Springer New York}
 }
 
-@book{Hjort_Holmes_Müller_Walker_2010, place={Cambridge}, series={Cambridge Series in Statistical and Probabilistic Mathematics}, title={Bayesian Nonparametrics}, publisher={Cambridge University Press}, year={2010}, collection={Cambridge Series in Statistical and Probabilistic Mathematics}}
+@book{Hjort_Holmes_Müller_Walker_2010, 
+  place={Cambridge}, 
+  series={Cambridge Series in Statistical and Probabilistic Mathematics}, 
+  title={Bayesian Nonparametrics}, 
+  publisher={Cambridge University Press}, 
+  year={2010}, 
+  collection={Cambridge Series in Statistical and Probabilistic Mathematics}
+}
+
+@book{mckinney2022python,
+  title={Python for Data Analysis: Data Wrangling with pandas, NumPy, and Jupyter},
+  author={McKinney, Wes},
+  year={2022},
+  publisher={O'Reilly Media},
+  edition={3},
+  isbn={978-1098104030}
+}
+
