pooling shrinkage etc

--- a/C2-L11.qmd
+++ b/C2-L11.qmd
@@ -62,9 +62,9 @@ $$
 B=30 \quad \text{from each locations}
 $$
 
-### Fully independent model
+### Fully independent model {#sec-indep-model}
 
-\index{pooling! commplete pooling}
+\index{pooling! complete pooling}
 Fitting a single model to all data: This approach treats all observations as independent, ignoring any potential differences or relationships between groups. In the cookie example, fitting a single Poisson model to all 150 cookies would "be ignoring potential differences between locations and the fact that cookies from the same location are likely to be more similar to each other."
 
 This kind of model is called fully independent model or an completely pooled model as we consider all the cookies belonging to a single group
@@ -81,7 +81,7 @@ At the other extreme we can think of fitting a model for each group separately.
 This kind of model is called a unpooled model.
 
 
-### Location-dependent model
+### Location-dependent model {#sec-location-dependent-model}
 
 \index{pooling!partial}
 Hierarchical models offer a powerful solution, acting as a "good compromise" between the two extreme approaches described above. They allow for the acknowledgment of natural groupings in data while still leveraging information across those groups.
