--- a/C2-L07.qmd
+++ b/C2-L07.qmd
@@ -945,7 +945,7 @@ in this case: - most of the points are to the right - the red line is almost fla
 
 \index{Cook's distance}
 \index{influence measures}
--   Originally introduced in [@cook1977a] [Cook’s Distance](https://en.wikipedia.org/wiki/Cook%27s_distance) is an estimate of the influence of a data point.
+-   Originally introduced in [@cook1977] [Cook’s Distance](https://en.wikipedia.org/wiki/Cook%27s_distance) is an estimate of the influence of a data point.
 -   It takes into account both the leverage and residual of each observation.
 -   Cook’s Distance is a summary of how much a regression model changes when the ith observation is removed.
 -   When it comes to outliers we care about outliers that have a high Cook's distance as they can have a large impact on the regression model. by shifting the sample fit from the population fit.
