--- a/references.bib
+++ b/references.bib
@@ -138,25 +138,37 @@ year = {2020}
   lccn = 2020024770,
 }
 
-
-@book{gelman2013bayesian,
-  title={Bayesian Data Analysis, Third Edition},
-  author={Gelman, A. and Carlin, J.B. and Stern, H.S. and Dunson, D.B. and Vehtari, A. and Rubin, D.B.},
-  isbn={9781439840955},
-  lccn={2013039507},
-  series={Chapman \& Hall/CRC Texts in Statistical Science},
-  year={2013},
-  publisher={Taylor \& Francis}
-}
-
 @book{gelman2006data,
   title={Data Analysis Using Regression and Multilevel/Hierarchical Models},
-  author={Gelman, A. and Hill, J.},
+  author={Gelman, Andrew and Hill, Jennifer},
   isbn={9781139460934},
   series={Analytical Methods for Social Research},
   url={https://books.google.co.il/books?id=c9xLKzZWoZ4C},
   year={2006},
   publisher={Cambridge University Press}
+}
+
+@article{gelman2008,
+	title = {A weakly informative default prior distribution for logistic and other regression models},
+	author = {Gelman, Andrew and Jakulin, Aleks and Pittau, Maria Grazia and Su, Yu-Sung},
+	year = {2008},
+	month = {12},
+	date = {2008-12-01},
+	journal = {The Annals of Applied Statistics},
+	volume = {2},
+	number = {4},
+	doi = {10.1214/08-aoas191},
+	url = {http://dx.doi.org/10.1214/08-AOAS191}
+}
+
+@book{gelman2013bayesian,
+  title={Bayesian Data Analysis, Third Edition},
+  author={Gelman, Andrew and Carlin, John B. and Stern, Hal S. and Dunson, David B. and Vehtari, Aki and Rubin, Donald B.},
+  isbn={9781439840955},
+  lccn={2013039507},
+  series={Chapman \& Hall/CRC Texts in Statistical Science},
+  year={2013},
+  publisher={Taylor \& Francis}
 }
 
 @article{good1953population,
@@ -607,13 +619,14 @@ URL = {https://doi.org/10.1214/ss/1177012488}
   publisher={Cambridge University Press}
 }
 
-@MISC {mo-1302543,
-    TITLE = {Why Square Brackets for Expectation},
-    AUTHOR = {Autolatry (https://math.stackexchange.com/users/25097/autolatry)},
-    HOWPUBLISHED = {Mathematics Stack Exchange},
-    NOTE = {URL:https://math.stackexchange.com/q/1302543 (version: 2015-05-28)},
-    EPRINT = {https://math.stackexchange.com/q/1302543},
-    URL = {https://math.stackexchange.com/q/1302543}
+
+@misc {mo-1302543,
+    title = {Why Square Brackets for Expectation},
+    author = {Autolatry},
+    howpublished = {Mathematics Stack Exchange},    
+    year = "2015",
+    url = {https://math.stackexchange.com/q/1302543},
+    note = "[Online; accessed 2015-05-28]"    
 }
 
 @misc{enwiki-functional,
@@ -902,18 +915,7 @@ url = {https://EconPapers.repec.org/RePEc:hay:hetcha:ramsey1926}
 	url = {http://dx.doi.org/10.1002/9780470686621}
 }
 
-@article{gelman2008,
-	title = {A weakly informative default prior distribution for logistic and other regression models},
-	author = {Gelman, Andrew and Jakulin, Aleks and Pittau, Maria Grazia and Su, Yu-Sung},
-	year = {2008},
-	month = {12},
-	date = {2008-12-01},
-	journal = {The Annals of Applied Statistics},
-	volume = {2},
-	number = {4},
-	doi = {10.1214/08-aoas191},
-	url = {http://dx.doi.org/10.1214/08-AOAS191}
-}
+
 
 @article{ghosh2018,
 	title = {On the Use of Cauchy Prior Distributions for Bayesian Logistic Regression},
@@ -1035,22 +1037,6 @@ howpublished = "\url{http://www-groups.dcs.st-and.ac.uk/~history/Biographies/Noe
 year = {2014}, 
 note = "Accessed 11/02/16",
 }
-
-
-@article{cook1977a,
-	title = {Detection of Influential Observation in Linear Regression},
-	author = {Cook, R. Dennis},
-	year = {1977},
-	month = {02},
-	date = {1977-02},
-	journal = {Technometrics},
-	pages = {15},
-	volume = {19},
-	number = {1},
-	doi = {10.2307/1268249},
-	url = {http://dx.doi.org/10.2307/1268249}
-}
-
 
 @article{dempster1977maximum,
   title={Maximum likelihood from incomplete data via the EM algorithm},
